RESOLVED FIXED214259
REGRESSION(r264280) [GTK][WPE] fast/gradients/conic-gradient-alpha.html is failing
https://bugs.webkit.org/show_bug.cgi?id=214259
Summary REGRESSION(r264280) [GTK][WPE] fast/gradients/conic-gradient-alpha.html is fa...
Lauro Moura
Reported 2020-07-13 09:56:07 PDT
Attachments
Patch (2.52 KB, patch)
2020-07-15 06:31 PDT, Carlos Garcia Campos
darin: review+
Darin Adler
Comment 1 2020-07-13 10:32:26 PDT
Oops, looks like I broke this. Happy to help fix it.
Darin Adler
Comment 2 2020-07-13 13:24:01 PDT
Any indication what’s going wrong yet?
Carlos Alberto Lopez Perez
Comment 3 2020-07-13 18:00:22 PDT
Darin Adler
Comment 4 2020-07-13 18:10:29 PDT
Maybe a bug in the blend function?
Carlos Garcia Campos
Comment 5 2020-07-15 06:27:41 PDT
There are two problems: 1. Now the blend is done using premultiplied alpha, since the first color stop is #00FF0000, the premultiplied is just 0, so we always end up with black color. So, just changing to use blendWithoutPremultiply() would fix the bug but... 2. There's a bug in blendWithoutPremultiply(), from is used in both fromSRGB and toSRGB. Fixing 1 and 2 I get the right output, but the test doesn't pass yet, there's a one pixel difference for some reason.
Carlos Garcia Campos
Comment 6 2020-07-15 06:31:13 PDT
Darin Adler
Comment 7 2020-07-15 09:48:17 PDT
Comment on attachment 404338 [details] Patch Nice! Thanks, this seems like a great fix.
Carlos Garcia Campos
Comment 8 2020-07-16 01:22:06 PDT
Note You need to log in before you can comment on or make changes to this bug.