REGRESSION(r264280) [GTK][WPE] fast/gradients/conic-gradient-alpha.html is failing https://bugs.webkit.org/show_bug.cgi?id=214259

Reviewed by Darin Adler.

* platform/graphics/ColorBlending.cpp:
(WebCore::blendWithoutPremultiply): Use 'to' instead of 'from' when converting to SRGBA.
* platform/graphics/cairo/GradientCairo.cpp:
(WebCore::createConic): Use blendWithoutPremultiply() instead of blend() for the color stops interpolation.

Canonical link: https://commits.webkit.org/227200@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@264449 268f45cc-cd09-0410-ab3c-d52691b4dbfc